# Tarnfui

./: .dockerignore  .gitignore  CDC.md  DEVBOOK.md  Design.md  Dockerfile  README.md  index.md  index.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-local-git.template.sh
.github/: copilot-instructions.md  cr.yaml
.github/workflows/: cd.yaml  ci.yaml  pages.yaml  release.yaml
charts/tarnfui/: Chart.yaml  values.yaml
charts/tarnfui/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml
src/tarnfui/: __init__.py  cli.py  config.py  example.py  kubernetes.py  scheduler.py
src/tarnfui/kubernetes/: __init__.py  base.py  connection.py  controller.py  resource_manager.py
src/tarnfui/kubernetes/resources/: __init__.py  cronjobs.py  deployments.py  events.py  managers.py  statefulsets.py  workloads.py
src/tarnfui/kubernetes/resources/managers/: __init__.py  kustomization.py
tests/: test_config.py  test_cronjobs_resource.py  test_deployments_resource.py  test_example.py  test_kubernetes.py  test_kubernetes_controller.py  test_kubernetes_resource.py  test_kustomization_manager.py  test_replicated_workload_resource.py  test_resource_manager.py  test_scheduler.py  test_statefulsets_resource.py
